--- a/EyalGreenbergCaseStudy6.Rmd
+++ b/EyalGreenbergCaseStudy6.Rmd
@@ -5,6 +5,11 @@ date: "June 19, 2016"
 output: html_document
 ---
 
+##### We have been given two sources of information, both from the World Bank Archive:
+##### 1. The GDP file - includes the list of countries, their yearly GDP (in USD millions) and ranking, based on this GDP; and-
+##### 2. The education file - includes various information, by country
+ 
+##### The purpose of this project is to use these sources, combine them, and build an analysis to understand information that the education file has, but with the context of ranking of the country or group of countries. 
 
 ```{r}
 #### download and load the relevant packages for tidying the data
@@ -46,13 +51,11 @@ MergedData <- merge(x = GDPData3, y = EDUCData, by = "CountryCode", all = TRUE)
 #### Question 1: Match the data based on the country shortcode. How many of the IDs match?
 #### Answer: 
 ##### First step: We will run the dim function in order to count the total rows in the merged file.
-##### Second step: We will run the summary function, and count the NAs in two places-
-###### 1. Column "Ranking" (originally in the GDP file)
-###### 2. Column "Long.Name" (originally in the EDUC file)
+##### Second step: We will run the summary function, and count the NAs in column "Ranking" (originally in the GDP file)
 
-##### Third step: We will deduct the total NAs in these two columns from the total numbers of rows. The remaining is the value we are looking for - the values that matched between the two files. 
+##### Third step: We will deduct the total NAs in this column from the total numbers of rows. The remaining is the value we are looking for - the values that matched between the two files. 
 
-##### The total matched data is 235-45-1=189
+##### The total matched data is 235-45=190
 ```{r}
 dim(MergedData)
 summary(MergedData)
@@ -94,3 +97,8 @@ q5 <- subset(MergedDataSorted, Ranking > 152 & Ranking <= 190)
 sum(q1$Income.Group == "Lower middle income")
 ```
 
+#### Conclusion
+#### 1. We have found that there are three countries with GDP significantly larger than the rest of the world - USA, China and Japan;
+#### 2. We can see that USA and Japan are in the "High Income: OECD" group, while china is in the "Lower Middle Income" group;
+#### 3. "Low Income" group contains countries with very low GDP, but "High Income Non OECD" group - as well. This is compared to "High Income OECD" and "Upper Middle Income" - these two groups have more variety of GDP in it, including countries with high GDP;
+#### 4. Finally, we can see that out of 38 countries, the upper quantile in terms of GDP ranking, only 5 countries are in the "Lower Middle Income".
